--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" />
 
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" href="./assest/image/light.png" type="image/x-icon">
+  <link rel="icon" href="./assest/image/dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+
   <link rel="stylesheet" href="style.css">
 
   <style>
