--- a/harvest/index.html
+++ b/harvest/index.html
@@ -3,12 +3,18 @@
 <html lang="en">
 <head>
   <title>Harvest</title>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" />
-  <link rel="icon" href="../favicon.png" type="image/x-icon">
+
+  <link rel="icon" href="../assest/image/light.png" type="image/x-icon">
+  <link rel="icon" href="../assest/image/dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+
   <link rel="stylesheet" href="../style.css">
+
   <script src="https://cdn.jsdelivr.net/npm/web3@1.3.6/dist/web3.min.js"></script>
 
   <style>
