--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <nav>
       <a class="active"><span>⌥ </span>home<span>'</span></a>
       <a href="./harvest"><span>⌥ </span>harvest<span>'</span></a>
+      <a href="./about"><span>⌥ </span>about<span>'</span></a>
       
-      <a target="_blank" href="https://mnfr.gitbook.io/sandbox-guys"><span>⌥ </span>about<span>"</span></a>
       <a target="_blank" href="https://mint.fun/ethereum/0x2a60293bbe8F580d348A707f51298bb47dD4707F"><span>⌥ </span>mint<span>"</span></a>
       <a target="_blank" href="https://opensea.io/collection/sandbox-guys"><span>⌥ </span>opensea<span>"</span></a> 
 
