--- a/harvest/index.html
+++ b/harvest/index.html
@@ -55,8 +55,8 @@
     <nav>
       <a href="../"><span>⌥ </span>home<span>'</span></a>
       <a class="active"><span>⌥ </span>harvest<span>'</span></a>
+      <a href="../about"><span>⌥ </span>about<span>'</span></a>
 
-      <a target="_blank" href="https://mnfr.gitbook.io/sandbox-guys"><span>⌥ </span>about<span>"</span></a>
       <a target="_blank" href="https://mint.fun/ethereum/0x2a60293bbe8F580d348A707f51298bb47dD4707F"><span>⌥ </span>mint<span>"</span></a>
       <a target="_blank" href="https://opensea.io/collection/sandbox-guys"><span>⌥ </span>opensea<span>"</span></a> 
     </nav>
